8-app-frontend-workload.yaml

#FRONTEND APP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: app
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: webapp
        version: app
    spec:
      containers:
      - name: webapp
        image: frandpradas/juno-front:v8
        imagePullPolicy: Always
      imagePullSecrets:
      - name: myregistrykey

---
#FRONTEND SERVICE

apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: app
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
  type: ClusterIP
